@@ -1,3 +1,11 @@
+2008-10-09  Kai Tietz  <kai.tietz@onevision.com>
+
+	* dlltool.c (PAGE_SIZE): Make sure it has bfd_vma type.
+	(PAGE_MASK): Likewise.
+	(sfunc): Change to address size of bfd_vma for base-file.
+	(flush_page): Likewise.
+	(gen_exp_file): Likewise.
+
 2008-10-07  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* readelf.c (process_section_headers): Do not cut the section names and
